examples/test/testpolicy19933.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19933
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key35: value36
      key13: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value25
          key39: value44
      podSelector:
        matchLabels:
          key13: value45
          key19: value10
